objects/ESN_MB_NodePage__c.object
<CustomObject>
    <description>ESN_MB MyBrands : Object to store MyBrands app landing pages and skeleton navigation</description>
    <fields>
        <fullName>ESN_MB_Abstract__c</fullName>
        <defaultValue>&quot;-&quot;</defaultValue>
        <description>Abstract description for a rubric</description>
        <label>Abstract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Alcohol_Type__c</fullName>
        <description>Stores the type of alcohol of the brand (Whisky, Vodka, Champagne...)</description>
        <inlineHelpText>Stores the type of alcohol of the brand (Whisky, Vodka, Champagne...)</inlineHelpText>
        <label>ESN_MB_Alcohol_Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>White Spirits and Rums</fullName>
                </value>
                <value>
                    <fullName>Scotch Whiskies</fullName>
                </value>
                <value>
                    <fullName>Other Whiskies</fullName>
                </value>
                <value>
                    <fullName>Cognac and Brandy</fullName>
                </value>
                <value>
                    <fullName>Anis-Based Spirits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_AvailableByDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Uniquement utilisé pour les rubriques. Valeur TRUE si et seulement si cette rubrique doit être disponible par défaut quand on crée une nouvelle marque</description>
        <label>Available By Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_MB_BrandParentId__c</fullName>
        <label>ESN_MB_BrandParentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Brand_Category__c</fullName>
        <description>Brand Category for MyBrands</description>
        <label>Brand Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TOP14</fullName>
                </value>
                <value>
                    <fullName>Wines</fullName>
                </value>
                <value>
                    <fullName>Key Local Brands</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Brand</fullName>
                </value>
                <value>
                    <fullName>Other Brands</fullName>
                </value>
                <value>
                    <fullName>LeCercle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_Brand_Company__c</fullName>
        <description>The Company the brand belongs to</description>
        <inlineHelpText>The Company the brand belongs to</inlineHelpText>
        <label>ESN_MB_Brand_Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Irish Distillers</fullName>
                </value>
                <value>
                    <fullName>The Absolut Company</fullName>
                </value>
                <value>
                    <fullName>Chivas Brothers</fullName>
                </value>
                <value>
                    <fullName>Martell Mumm Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Winemakers</fullName>
                </value>
                <value>
                    <fullName>Havana Club International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_Brand_DAM_Id__c</fullName>
        <description>Brand Id for DAM</description>
        <label>Brand DAM Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Brand_Initialization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the brand needs to get all DAM assets or only the last modified (using the batch)</description>
        <inlineHelpText>Check if you need all DAM Assets / Uncheck if you only want the last modified</inlineHelpText>
        <label>Brand Initialization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Brand_LastImportAssetsDate__c</fullName>
        <description>Get the last import date for assets in the brand</description>
        <inlineHelpText>Get the last import date for assets in the brand</inlineHelpText>
        <label>Brand Last Import Assets Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Brand_Scope__c</fullName>
        <formula>IF(  RecordType.Name  == &quot;Brand&quot;,  Name ,   
IF(  ESN_MB_ParentId__r.RecordType.Name  == &quot;Brand&quot;,  ESN_MB_ParentId__r.Name,   
IF(  ESN_MB_ParentId__r.ESN_MB_ParentId__r.RecordType.Name  == &quot;Brand&quot;,  ESN_MB_ParentId__r.ESN_MB_ParentId__r.Name, 
IF(  ESN_MB_ParentId__r.ESN_MB_ParentId__r.ESN_MB_ParentId__r.RecordType.Name  == &quot;Brand&quot;,  ESN_MB_ParentId__r.ESN_MB_ParentId__r.ESN_MB_ParentId__r.Name, 


ESN_MB_ParentId__r.ESN_MB_ParentId__r.ESN_MB_ParentId__r.ESN_MB_ParentId__r.Name    )
)

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_ChatterGroup_Id__c</fullName>
        <description>Salesforce Id of the chatter public group supporting the brand</description>
        <inlineHelpText>Salesforce Id of the chatter public group supporting the brand</inlineHelpText>
        <label>Chatter Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_CssClassName__c</fullName>
        <description>Field used for rubrics only. Stores the name of the css class used to display the correct image fir this rubric in the footer menu.</description>
        <label>Css Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Default_Brand_Variant_Value__c</fullName>
        <label>Default Brand Variant Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Deployment_Status__c</fullName>
        <inlineHelpText>This option will disable brand tile on MyBrands homepage</inlineHelpText>
        <label>Deployment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enable</fullName>
                </value>
                <value>
                    <fullName>Disable</fullName>
                </value>
                <value>
                    <fullName>Work in progress</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_ExtId__c</fullName>
        <description>Ext Id used for data migration</description>
        <externalId>true</externalId>
        <inlineHelpText>Ext Id used for data migration</inlineHelpText>
        <label>ESN_MB_ExtId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ESN_MB_IsMasterbrand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only used for record type &quot;Product&quot;.
Checked if this product is the Masterbrand for its brand.</description>
        <inlineHelpText>Only used for record type &quot;Product&quot;.
Checked if this product is the Masterbrand for its brand.</inlineHelpText>
        <label>IsMasterbrand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_MB_NorthPlains_Portal_URL__c</fullName>
        <description>The URL for Northplains Portal for this Brand</description>
        <inlineHelpText>The URL for Northplains Portal for this Brand</inlineHelpText>
        <label>NorthPlains Portal URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Order__c</fullName>
        <description>Indicate order apparence in menu or other print loops</description>
        <inlineHelpText>Indicate order apparence in menu or other print loops</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESN_MB_ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to store NodePage Parent Id</description>
        <inlineHelpText>Set Parent Node Page.</inlineHelpText>
        <label>Parent Node</label>
        <referenceTo>ESN_MB_NodePage__c</referenceTo>
        <relationshipName>Node_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Redirect__c</fullName>
        <description>Define the redirect page for navigation</description>
        <inlineHelpText>If page is provided user will be redirected to the specified page</inlineHelpText>
        <label>Redirect to Page</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Section__c</fullName>
        <description>Define an type for Asset record</description>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Brand Activations Library</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Guidelines</fullName>
                </value>
                <value>
                    <fullName>History &amp; Education</fullName>
                </value>
                <value>
                    <fullName>Strategy_LeCercle</fullName>
                </value>
                <value>
                    <fullName>Global Commercial Agreements</fullName>
                </value>
                <value>
                    <fullName>Assets &amp; Activations</fullName>
                </value>
                <value>
                    <fullName>Performance &amp; Monitoring</fullName>
                </value>
                <value>
                    <fullName>Who&apos;s Who &amp; Organization</fullName>
                </value>
                <value>
                    <fullName>Trainings</fullName>
                </value>
                <value>
                    <fullName>Belief</fullName>
                </value>
                <value>
                    <fullName>Mythtelling</fullName>
                </value>
                <value>
                    <fullName>Parish</fullName>
                </value>
                <value>
                    <fullName>Set Of Visual Icons</fullName>
                </value>
                <value>
                    <fullName>Services, Rituals &amp; Experiences</fullName>
                </value>
                <value>
                    <fullName>Temple</fullName>
                </value>
                <value>
                    <fullName>Way Of Life</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>Full Beyond Model</fullName>
                </value>
                <value>
                    <fullName>Business Activation Library</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_MB_Title__c</fullName>
        <label>ESN_MB_Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Url_Facebook_Link__c</fullName>
        <label>url facebook link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Url_Flickr_Link__c</fullName>
        <label>url flickr link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Url_GooglePlus_Link__c</fullName>
        <label>url googleplus link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Url_Instagram_Link__c</fullName>
        <description>Instagram url of the brand to link on the &quot;Forum&quot; tab of MyBrands with the corresponding logo</description>
        <label>url instagram link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Url_Pinterest_Link__c</fullName>
        <description>Pinterest url of the brand to link on the &quot;Forum&quot; tab of MyBrands with the corresponding logo</description>
        <label>url pinterest link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Url_Twitter_Link__c</fullName>
        <label>url twitter link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_Url_Youtube_Link__c</fullName>
        <label>url youtube link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_MB_View_Link__c</fullName>
        <description>Link used to open the record in standard view (Not redirecting to My Brand App)</description>
        <formula>HYPERLINK(&quot;/&quot; + Id + &quot;?nooverride=1&quot;,  Name  ,&quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Link</label>
        <type>Text</type>
    </fields>
    <label>MyBrands Node Page</label>
    <listViews>
        <fullName>ESN_MB_All_Nodes</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_Brand_Scope__c</columns>
        <columns>ESN_MB_ParentId__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ESN_MB_Section__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Nodes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ESN_MB_Brands_View</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_Deployment_Status__c</columns>
        <columns>ESN_MB_ChatterGroup_Id__c</columns>
        <columns>ESN_MB_Brand_Initialization__c</columns>
        <columns>ESN_MB_Brand_LastImportAssetsDate__c</columns>
        <columns>ESN_MB_Order__c</columns>
        <columns>ESN_MB_Brand_DAM_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ESN_MB_Default_Brand_Variant_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_NodePage__c.ESN_MB_Brand</value>
        </filters>
        <label>Brands</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ESN_MB_Homepages</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_Order__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_NodePage__c.ESN_MB_Homepage</value>
        </filters>
        <label>Homepages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ESN_MB_Products</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_Order__c</columns>
        <columns>ESN_MB_Section__c</columns>
        <columns>ESN_MB_Abstract__c</columns>
        <columns>ESN_MB_Redirect__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ESN_MB_Default_Brand_Variant_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_NodePage__c.ESN_MB_Product</value>
        </filters>
        <label>Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ESN_MB_Rubrics</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_Order__c</columns>
        <columns>ESN_MB_Section__c</columns>
        <columns>ESN_MB_Abstract__c</columns>
        <columns>ESN_MB_Redirect__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ESN_MB_Default_Brand_Variant_Value__c</columns>
        <columns>ESN_MB_CssClassName__c</columns>
        <columns>ESN_MB_AvailableByDefault__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_NodePage__c.ESN_MB_Rubric</value>
        </filters>
        <label>Rubrics</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Jacob_s_Creek_Products</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_IsMasterbrand__c</columns>
        <columns>ESN_MB_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Jacob</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_NodePage__c.ESN_MB_Product</value>
        </filters>
        <label>Products Jacob&apos;s Creek</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Products_Brancott_Estate</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_IsMasterbrand__c</columns>
        <columns>ESN_MB_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Brancott</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_NodePage__c.ESN_MB_Product</value>
        </filters>
        <label>Products Brancott Estate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Products_Chivas</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_IsMasterbrand__c</columns>
        <columns>ESN_MB_Order__c</columns>
        <columns>ESN_MB_Brand_Scope__c</columns>
        <columns>ESN_MB_Brand_DAM_Id__c</columns>
        <columns>ESN_MB_Default_Brand_Variant_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>chivas</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_NodePage__c.ESN_MB_Product</value>
        </filters>
        <label>Products Chivas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Products_Havana_Club</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_IsMasterbrand__c</columns>
        <columns>ESN_MB_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Havana</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_NodePage__c.ESN_MB_Product</value>
        </filters>
        <label>Products Havana Club</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Products_Jameson</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>NAME</columns>
        <columns>ESN_MB_Brand_DAM_Id__c</columns>
        <columns>ESN_MB_Brand_Scope__c</columns>
        <columns>ESN_MB_Default_Brand_Variant_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ESN_MB_Brand_Scope__c</field>
            <operation>contains</operation>
            <value>jameson</value>
        </filters>
        <label>Products Jameson</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Products_Kahlua</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_IsMasterbrand__c</columns>
        <columns>ESN_MB_Order__c</columns>
        <columns>ESN_MB_Default_Brand_Variant_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Kahl</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_NodePage__c.ESN_MB_Product</value>
        </filters>
        <label>Products Kahlúa</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Products_Malibu</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_IsMasterbrand__c</columns>
        <columns>ESN_MB_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ESN_MB_Brand_Scope__c</field>
            <operation>contains</operation>
            <value>Malibu</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_NodePage__c.ESN_MB_Product</value>
        </filters>
        <label>Products Malibu</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Products_Perrier_Jou_t</fullName>
        <columns>NAME</columns>
        <columns>ESN_MB_Brand_DAM_Id__c</columns>
        <columns>ESN_MB_Default_Brand_Variant_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ESN_MB_Brand_Scope__c</field>
            <operation>contains</operation>
            <value>Perrier</value>
        </filters>
        <label>Products Perrier Jouët</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Products_Royal_Salute</fullName>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_Order__c</columns>
        <columns>ESN_MB_IsMasterbrand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>royal</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_NodePage__c.ESN_MB_Product</value>
        </filters>
        <label>Products Royal Salute</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Products_Stoneleigh</fullName>
        <columns>NAME</columns>
        <columns>ESN_MB_View_Link__c</columns>
        <columns>ESN_MB_Default_Brand_Variant_Value__c</columns>
        <columns>ESN_MB_IsMasterbrand__c</columns>
        <columns>ESN_MB_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ESN_MB_Brand_Scope__c</field>
            <operation>contains</operation>
            <value>stoneleigh</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ESN_MB_NodePage__c.ESN_MB_Product</value>
        </filters>
        <label>Products Stoneleigh</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PageNode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyBrands Node Pages</pluralLabel>
    <recordTypes>
        <fullName>ESN_MB_Brand</fullName>
        <active>true</active>
        <description>Define Homepage for a Brand</description>
        <label>Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ESN_MB_Homepage</fullName>
        <active>true</active>
        <description>Homepage for MyBrand Application</description>
        <label>Homepage</label>
    </recordTypes>
    <recordTypes>
        <fullName>ESN_MB_Product</fullName>
        <active>true</active>
        <description>Define Product attribute</description>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>ESN_MB_Rubric</fullName>
        <active>true</active>
        <description>Define a rubric record</description>
        <label>Rubric</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>